# deepRL

./: Instructions.md  README.md  env_install  sac.py
Jetbot/: Readme
RGB-D algo/src/: Readme.md
Status report/: CNN review.pptx  Status update_v03.pptx  Status update_v04.pptx  Status update_v05.pptx  Status update_v07.2.pptx  Status update_v08.pptx  Status update_v09.pptx  Status update_v11.pptx
Thesis/: Instructions  Instructions.md
Thesis/camera_ws/: .rosinstall.bak
Thesis/classical_nav/: Instructions.md  commands
Thesis_nav/: Instructions.md
drl_navigation/: CMakeLists.txt  Instructions.md  README.md  package.xml
drl_navigation/launch/: ddpg_stage_1sim_mapless.launch  ddpg_stage_2sim_mapless.launch  ddpg_stage_3sim_mapless.launch
drl_navigation/maps/: amj_office.yaml  env.yaml  sim_env2.yaml
drl_navigation/src/: ddpg_sim_mapless.py  environment_turtle_sim_mapless.py  globals.py  respawnGoal.py
drl_navigation/src/Models/real/: 1000_actor.pt  100_actor.pt  280_critic.pt  460_actor.pt  60_critic.pt  640_actor.pt  640_critic.pt
drl_navigation/src/Models/stage_1/: 0_actor.pt  0_critic.pt  100_actor.pt  100_critic.pt  20_actor.pt  60_critic.pt  80_actor.pt  80_critic.pt
drl_navigation/src/Models/stage_2/: 50_critic.pt  950_actor.pt  950_critic.pt
drl_navigation/src/Models/stage_3/: 0_actor.pt  0_critic.pt
drl_navigation/src/Models/world_u/: 20_critic.pt
monolocoRosWrapper/: Readme
monolocoRosWrapper/mybot_gazebo/: package.xml
robot/: frames.gv
robot/devel/: .rosinstall
sort_track/src/: breach_detector.py  track.py
(+490 files in other folders)
