<?xml version="1.0"?>
<package format="2">
  <name>drl_navigation</name>
  <version>0.0.0</version>
  <description>Reinforcement learning</description>
  <maintainer email="sergesaaybi1@hotmail.com">Serges</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>

  <export>
  </export>
</package>
